# Web-application-for-fishermen

./: .env.example  .flake8  .gitignore  README.md  REVIEW.md  pyproject.toml
api/: permissions.py  serializers.py  urls.py  views.py
core/: settings.py  urls.py
smartfishing/: admin.py  admin_views.py  apps.py  constants.py  forms.py  mixins.py  models.py  views.py
smartfishing/management/commands/: points_to_archive.py
static/map/js/: mapScript.js
templates/admin/: report.html  reports_list.html
templates/comments/: edit.html
templates/forbidden_zones/: form.html  list.html
templates/memberships/: payment.html  payment_form.html  send.html  status.html
templates/points/: archives.html  by_type.html  detail.html  edit.html  favorites.html
templates/registration/: login.html  sign_up.html
templates/smartfishing/: base.html  home.html  map.html
templates/users/: profile.html  profile_edit.html
users/: admin.py  constants.py  forms.py  models.py  validators.py  views.py
